--- a/python_app/logging.conf
+++ b/python_app/logging.conf
@@ -39,19 +39,19 @@ args=(sys.stdout,)
 class=FileHandler
 level=INFO
 formatter=form01
-args=('app_log.txt', 'a')
+args=('log/app.log', 'a')
 
 [handler_errorhandler]
 class=FileHandler
 level=ERROR
 formatter=form01
-args=('app_log.txt', 'a')
+args=('log/app.log', 'a')
 
 [handler_filehandler]
 class=FileHandler
 level=DEBUG
 formatter=form01
-args=('app_log.txt', 'w')
+args=('log/app.log', 'w')
 
 ####################### formatters ########################
 [formatters]
